Inserindo depoimentos e saiba-mais na pagina index.

--- a/index.html
+++ b/index.html
@@ -42,3 +42,53 @@
             </section>
         </div>
     </header>
+
+    <section class="saiba-mais">
+        <div class="container">
+            <div class="saiba-mais-texto">
+                <h3>Conheça nosso projeto</h3>
+                <p>Imagine um mundo onde cada ato de reciclagem não só preserva o planeta, mas também se transforma em uma experiência incrível. Nosso projeto combina inovação tecnológica com a beleza dos oceanos, incentivando a reciclagem enquanto oferece a oportunidade única de mergulhar em recifes artificiais criados a partir dos materiais que você recicla. Com nosso software, empresas de coleta podem gerenciar eficientemente seus programas de reciclagem, enquanto os participantes são recompensados com mergulhos gratuitos ao se destacarem na gincana de reciclagem. Junte-se a nós nessa jornada para proteger nossos oceanos, transformando resíduos em maravilhas submarinas.</p>
+                <a class="btn" href="./about.html">Saiba mais aqui</a>
+            </div>
+            <div class="saiba-mais-img">
+                <img src="./img/recife(1).png" alt="Recife artificial">
+            </div>
+        </div>
+    </section>
+
+    <section class="saiba-mais">
+        <div class="container">
+            <div class="saiba-mais-img">
+                <img src="./img/recife(2).png" alt="Recife artificial">
+            </div>
+            <div class="saiba-mais-texto">
+                <h3>Nossos servicos</h3>
+                <p>Imagine um software que não apenas revoluciona a gestão de programas de reciclagem, mas também oferece uma experiência única e recompensadora. Nosso serviço oferece às empresas de coleta a oportunidade de otimizar seus processos de reciclagem, incentivando a participação dos usuários por meio de uma gincana emocionante. Os participantes acumulam pontos ao reciclar materiais, e os líderes do ranking são premiados com mergulhos gratuitos em recifes artificiais que ajudaram a criar. Ao unir tecnologia inovadora com o fascínio dos oceanos, estamos não apenas transformando a maneira como o mundo recicla, mas também proporcionando uma conexão direta entre ações sustentáveis e experiências memoráveis. Junte-se a nós nessa jornada para um futuro mais sustentável e emocionante.</p>
+                <a class="btn" href="./servicos.html">Saiba mais aqui</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="depoimentos">
+        <div class="container">
+            <h3>O que dizem sobre?</h3>
+            <p>Veja alguns comentários sobre os recifes artificiais</p>
+            <div class="cards">
+                <div class="card-usuario">
+                    <img src="./img/pescador.png" alt="icone pescador">
+                    <p class="nome-usuario">Pescador Artesanal, Jorge</p>
+                    <p class="depoimento-usuario">"Recifes artificiais são utilizados por pescadores artesanais há bastante tempo por agregarem uma grande concentração de peixes em uma área relativamente pequena, e por isso, é importante que haja o monitoramento do recife para evitar a sobrepesca. São utilizados também para impedir a pesca de arrasto em locais onde a prática é proibida, pois as estruturas artificiais danificam as redes."</p>
+                </div>
+                <div class="card-usuario">
+                    <img src="./img/coordenador-icon.png" alt="">
+                    <p class="nome-usuario"> Coordenador do programa Rebimar, Robin Hilbert</p>
+                    <p class="depoimento-usuario">"Além de criar um ambiente de refúgio, os recifes artificiais também funcionam para impedir a pesca de arrasto industrial, extremamente predatória. “Os recifes servem como área de refúgio, reprodução e alimentação de dezenas de espécies."</p>
+                </div>
+                <div class="card-usuario">
+                    <img src="./img/mergulhador-icon.png" alt="">
+                    <p class="nome-usuario">Mergulhador Profissional, Julio Souza </p>
+                    <p class="depoimento-usuario">"Eu sou mergulhador profissional e instrutor do projeto hoje e cada mergulho é sempre muito emocionante. Eu tenho centenas de mergulhos em todos estes pontos e cada um deles parece um novo mergulho. Eu já avistei raias em volta dos recifes, meros… cada vez é uma nova emoção que vem com a sensação de que nós conseguimos plantar uma sementinha para colaborar com a conservação dos oceanos. Eu tenho orgulho de ser parte disso."</p>
+                </div>
+            </div>
+        </div>
+    </section>
