--- a/index.html
+++ b/index.html
@@ -92,3 +92,42 @@
             </div>
         </div>
     </section>
+
+    <section class="parceiros">
+        <div class="container">
+            <h3>Nossos parceiros</h3>
+            <p>Conheça as empresas que apoiam o projeto OceanGuard</p>
+            <div>
+                <img src="./img/parceiro(1).png" alt="Logo O20">
+                <img src="./img/parceiro(2).png" alt="Logo FIAP">
+                <img src="./img/parceiro(3).png" alt="Logo Pacto Global Brasil">
+                <img src="./img/parceiro(4).png" alt="Logo Softtek ">
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div id="footer-container">
+          <div class="footer-section">
+            <h3>Contato</h3>
+            <p>Email:leo-bianchi@hotmail.com</p>
+            <p>Telefone: (11)99412-3559</p>
+          </div>
+      
+          <div class="footer-section">
+            <h3>Redes Sociais</h3>
+            <a href="https://www.facebook.com">Facebook</a><br>
+            <a href="https://www.twitter.com">Twitter</a><br>
+            <a href="https://www.instagram.com">Instagram</a><br>
+          </div>
+      
+          <div class="footer-section">
+            <h3>Endereço</h3>
+            <p>Av. Paulista, 1106</p>
+            <p>Bela Vista, São Paulo</p>
+            <p>CEP: 01311-000</p>
+          </div>
+        </div>
+    </footer>
+</body>
+</html>
