--- a/login-sucesso.html
+++ b/login-sucesso.html
@@ -32,3 +32,9 @@
                     </li>
                 </ul>
             </nav>
+            <section class="banner">
+                <div class="banner-texto">
+                    <h1>Deposite seu lixo</h1>
+                    <p>Selecione o material, digite a quantidade e obtenha pontos.</p>
+                </div>
+            </section>
