--- a/login-sucesso.html
+++ b/login-sucesso.html
@@ -38,3 +38,9 @@
                     <p>Selecione o material, digite a quantidade e obtenha pontos.</p>
                 </div>
             </section>
+            /div>
+    </header>
+    <main>
+        <section id="despejo-materiais">
+            <h2>Despejo de Materiais</h2>
+            <label for="tipo-material">Tipo de Material:</label>
