--- a/login-sucesso.html
+++ b/login-sucesso.html
@@ -44,3 +44,10 @@
         <section id="despejo-materiais">
             <h2>Despejo de Materiais</h2>
             <label for="tipo-material">Tipo de Material:</label>
+            <select id="tipo-material">
+                <option value="metal">Metal</option>
+                <option value="papel">Papel</option>
+                <option value="plastico">Plástico</option>
+                <option value="vidro">Vidro</option>
+                <option value="outros">Outros</option>
+            </select>
