--- a/login-sucesso.html
+++ b/login-sucesso.html
@@ -51,3 +51,14 @@
                 <option value="vidro">Vidro</option>
                 <option value="outros">Outros</option>
             </select>
+            <label for="quantidade-material">Quantidade (gramas):</label>
+            <input type="number" id="quantidade-material">
+            <button onclick="despejarMateriais()">Despejar</button>
+            <p id="pontuacao-acumulada">Pontuação acumulada: 0</p>
+            <p id="mensagem"></p>
+        </section>
+        <div id="pontuacao-usuario" class="menu-lateral">
+            <h2>Sua Pontuação</h2>
+            <p id="pontuacao-usuario-valor">0 pontos</p>
+        </div>
+    </main>
