--- a/login-sucesso.html
+++ b/login-sucesso.html
@@ -62,3 +62,10 @@
             <p id="pontuacao-usuario-valor">0 pontos</p>
         </div>
     </main>
+    <footer>
+        <div id="footer-container">
+            <div class="footer-section">
+                <h3>Contato</h3>
+                <p>Email: leo-bianchi@hotmail.com</p>
+                <p>Telefone: (11)99412-3559</p>
+            </div>
