--- a/ranking.html
+++ b/ranking.html
@@ -10,3 +10,24 @@
     <header>
         <div class="container">
             <nav>
+                <a href="./index.html">
+                    <img class="icone" src="./img/oceanguard-logo.png" alt="Logo">
+                </a>
+                <ul class="ul">
+                    <li>
+                        <a href="./index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="./about.html">Sobre</a>
+                    </li>
+                    <li>
+                        <a href="./servicos.html">Servicos</a>
+                    </li>
+                    <li>
+                        <a href="./#footer-container">Contato</a>
+                    </li>
+                    <li>
+                        <a class="btn" href="./login.html">Login</a> 
+                    </li>
+                </ul>
+            </nav>
