--- a/ranking.html
+++ b/ranking.html
@@ -31,3 +31,22 @@
                     </li>
                 </ul>
             </nav>
+            <section class="banner">
+                <div class="banner-texto">
+                    <h1>Ranking</h1>
+                    <p>Acompanhe sua posição no ranking logo abaixo</p>
+                </div>
+            </section>
+        </div>
+    </header>
+
+    <section class="ranking-section">
+        <h2>Gincana da Reciclagem</h2>
+        <div class="ranking-container">
+            <div class="ranking-header">
+                <span class="ranking-header-item">Nome</span>
+                <span class="ranking-header-item">Pontuação</span>
+            </div>
+            <div id="ranking-list" class="ranking-list"></div>
+        </div>
+    </section>
