--- a/ranking.html
+++ b/ranking.html
@@ -50,3 +50,31 @@
             <div id="ranking-list" class="ranking-list"></div>
         </div>
     </section>
+
+    <footer>
+        <div id="footer-container">
+            <div class="footer-section">
+                <h3>Contato</h3>
+                <p>Email: leo-bianchi@hotmail.com</p>
+                <p>Telefone: (11)99412-3559</p>
+            </div>
+        
+            <div class="footer-section">
+                <h3>Redes Sociais</h3>
+                <a href="https://www.facebook.com">Facebook</a><br>
+                <a href="https://www.twitter.com">Twitter</a><br>
+                <a href="https://www.instagram.com">Instagram</a><br>
+            </div>
+        
+            <div class="footer-section">
+                <h3>Endereço</h3>
+                <p>Av. Paulista, 1106</p>
+                <p>Bela Vista, São Paulo</p>
+                <p>CEP: 01311-000</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="./js/script.js"></script>
+</body>
+</html>
